search bar alignment fix

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -169,6 +169,7 @@ i.supplier-dropdown-button {
     #search {
       width: 35%;
       overflow: auto;
+      margin-top: 18px;
       margin-bottom: 35px;
     }
 
